Fix erros and add apresentation section

--- a/index.html
+++ b/index.html
@@ -28,6 +28,21 @@
     </header>
 
     <div class="main-content-container">
+        <section id="Historia">
+            <div class="history-content">
+                <h2>Historia</h2>
+                <p>Apresentamos o Heriny, nosso inovador robô de combate desenvolvido para o projeto Robocop. Com um
+                    design focado em agilidade e precisão, seu objetivo é claro: estourar o balão dos adversários e
+                    conquistar a vitória na arena!</p>
+                <p>O Heriny foi projetado para ser uma máquina de combate eficaz e estratégica. Uma das suas
+                    características mais distintivas são as suas duas armas de ataque, meticulosamente construídas com
+                    palitos de churrasco. Essas "lanças" foram posicionadas de forma a maximizar o alcance e a força do
+                    impacto, tornando o Heriny uma ameaça real para qualquer oponente.</p>
+                <p>Além da sua capacidade ofensiva, o Heriny é o resultado de uma cuidadosa pesquisa e desenvolvimento,
+                    combinando mecânica, eletrônica e programação para criar um competidor formidável. Estamos
+                    confiantes de que ele tem o potencial para se destacar e demonstrar nossa dedicação ao projeto.</p>
+            </div>
+        </section>
         <section id="Images">
             <div class="carousel-container">
                 <div class="carousel-track">
@@ -48,22 +63,6 @@
                 <button class="carousel-button next">❯</button>
             </div>
         </section>
-
-        <section id="Historia">
-            <div class="history-content">
-                <h2>Historia</h2>
-                <p>Apresentamos o Heriny, nosso inovador robô de combate desenvolvido para o projeto Robocop. Com um
-                    design focado em agilidade e precisão, seu objetivo é claro: estourar o balão dos adversários e
-                    conquistar a vitória na arena!</p>
-                <p>O Heriny foi projetado para ser uma máquina de combate eficaz e estratégica. Uma das suas
-                    características mais distintivas são as suas duas armas de ataque, meticulosamente construídas com
-                    palitos de churrasco. Essas "lanças" foram posicionadas de forma a maximizar o alcance e a força do
-                    impacto, tornando o Heriny uma ameaça real para qualquer oponente.</p>
-                <p>Além da sua capacidade ofensiva, o Heriny é o resultado de uma cuidadosa pesquisa e desenvolvimento,
-                    combinando mecânica, eletrônica e programação para criar um competidor formidável. Estamos
-                    confiantes de que ele tem o potencial para se destacar e demonstrar nossa dedicação ao projeto.</p>
-            </div>
-        </section>
     </div>
 
     <section id="Sistema">
@@ -75,6 +74,7 @@
                     de 360 graus, e o outro Servo TowerPro MG90S com ângulo de rotação de 180 graus. Os dois possuem
                     dois palitos de churrasco colados para conseguirem acertar no balão adversário.</p>
             </div>
+            <section id="Hardware">
             <div class="hardware-column">
                 <h2>Hardware</h2>
                 <div class="hardware-item">
@@ -86,56 +86,85 @@
                     <p>Placa Mega 2560 R3</p>
                 </div>
             </div>
+            </section>
         </div>
     </section>
 
     <section id="Apresentacao">
         <h2>Apresentação</h2>
+        <div class="videos-container">
+            <div class="video-box">
+                <iframe src="https://www.youtube.com/embed/watch?v=ltQa-6Dqfh8&list=RDPsDHm58iwcA&index=2"
+                    frameborder="0"></iframe>
+            </div>
+            <div class="video-box">
+                <iframe src="https://www.youtube.com/embed/watch?v=ltQa-6Dqfh8&list=RDPsDHm58iwcA&index=2"
+                    title="Construção" frameborder="0" allow=allowfullscreen></iframe>
+            </div>
+        </div>
     </section>
     <section id="Grupo">
-    <h2>Grupo</h2>
-    <div class="group-container">
-        
-        <div class="member-card">
-            <div class="member-photo">
-                <img src="./img/melany.jpg" alt="Foto de Melany Ayala">
-            </div>
-            <div class="member-details">
-                <h3>Melany Ayala</h3>
-                <p>Estudante de Sistemas de informação - 2 Semestre</p>
-                <p>Link para contato: <a href="https://linkedin.com/in/melany-ayala-653a02301" target="_blank">linkedin.com/in/melany-ayala-653a02301</a></p>
-            </div>
-        </div>
+        <h2>Grupo</h2>
+        <div class="group-container">
 
-        <div class="member-card">
-            <div class="member-photo">
-                <img src="./img/Hector.jpg" alt="Foto de Hector Coelho">
+            <div class="member-card">
+                <div class="member-photo">
+                    <img src="./img/melany.jpg" alt="Foto de Melany Ayala">
+                </div>
+                <div class="member-details">
+                    <h3>Melany Ayala</h3>
+                    <p>Estudante de Sistemas de informação - 2 Semestre</p>
+                    <p>Link para contato: <a href="https://linkedin.com/in/melany-ayala-653a02301"
+                            target="_blank">linkedin.com/in/melany-ayala-653a02301</a></p>
+                </div>
             </div>
-            <div class="member-details">
-                <h3>Hector Coelho</h3>
-                <p>Estudante de Sistemas de informação - 2 Semestre</p>
-                <p>Link para contato: <a href="https://linkedin.com/in/hector-coelho" target="_blank">linkedin.com/in/hector-coelho</a></p>
-            </div>
-        </div>
 
-        <div class="member-card">
-            <div class="member-photo">
-                <img src="./img/Eric.jpg" alt="Foto de Eric Hirano">
+            <div class="member-card">
+                <div class="member-photo">
+                    <img src="./img/Hector.jpg" alt="Foto de Hector Coelho">
+                </div>
+                <div class="member-details">
+                    <h3>Hector Coelho</h3>
+                    <p>Estudante de Sistemas de informação - 2 Semestre</p>
+                    <p>Link para contato: <a href="https://linkedin.com/in/hector-coelho"
+                            target="_blank">linkedin.com/in/hector-coelho</a></p>
+                </div>
             </div>
-            <div class="member-details">
-                <h3>Eric Hirano</h3>
-                <p>Estudante de Sistemas de informação - 2 Semestre</p>
-                <p>Link para contato: <a href="mailto:ericrira2@gmail.com" target="_blank">ericrira2@gmail.com</a></p>
-            </div>
-        </div>
 
-    </div>
-</section>
+            <div class="member-card">
+                <div class="member-photo">
+                    <img src="./img/Eric.jpg" alt="Foto de Eric Hirano">
+                </div>
+                <div class="member-details">
+                    <h3>Eric Hirano</h3>
+                    <p>Estudante de Sistemas de informação - 2 Semestre</p>
+                    <p>Link para contato: <a href="mailto:ericrira2@gmail.com" target="_blank">ericrira2@gmail.com</a>
+                    </p>
+                </div>
+            </div>
+            <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
+            <df-messenger intent="WELCOME" chat-title="JeffersonAyala" agent-id="ab148c8a-fd0b-4b5d-ae90-34c3781ac28e"
+                language-code="pt-br"></df-messenger>
+        </div>
+    </section>
 
     <script src="./script.js"></script>
 </body>
 <footer>
-    <p>© 2025 Heriny. All rights reserved to Heriny.</p>
+    <div class="footer-content">
+        <p>© 2025 Heriny. All rights reserved to Heriny.</p>
+        <div class="icone-container">
+            <a href="https://github.com/memellsss/heriny">
+                <img src="./img/git.png" alt="Logo github">
+            </a>
+            <a href="https://www.youtube.com/channel/UC41aElwlHTOdDB99F3r_VFg">
+                <img src="./img/youtube.jpg" alt="Logo youtube">
+            </a>
+            <a href="https://www.linkedin.com/in/melany-ayala-653a02301">
+                <img src="./img/linkedin-icon.webp" alt="Logo linkedin">
+            </a>
+        </div>
+    </div>
 </footer>
 
 </html>
