--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Calistoga&family=Epunda+Sans:ital,wght@0,300..900;1,300..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap"
         rel="stylesheet">
-    <title>Heriny</title>
+    <title>JeffersonAyala</title>
 </head>
 
 <body>
@@ -31,14 +31,14 @@
         <section id="Historia">
             <div class="history-content">
                 <h2>Historia</h2>
-                <p>Apresentamos o Heriny, nosso inovador robô de combate desenvolvido para o projeto Robocop. Com um
+                <p>Apresentamos o Jefersson Ayala nosso inovador robô de combate desenvolvido para o projeto Robocop. Com um
                     design focado em agilidade e precisão, seu objetivo é claro: estourar o balão dos adversários e
                     conquistar a vitória na arena!</p>
-                <p>O Heriny foi projetado para ser uma máquina de combate eficaz e estratégica. Uma das suas
+                <p>O Jefersson Ayala foi projetado para ser uma máquina de combate eficaz e estratégica. Uma das suas
                     características mais distintivas são as suas duas armas de ataque, meticulosamente construídas com
                     palitos de churrasco. Essas "lanças" foram posicionadas de forma a maximizar o alcance e a força do
-                    impacto, tornando o Heriny uma ameaça real para qualquer oponente.</p>
-                <p>Além da sua capacidade ofensiva, o Heriny é o resultado de uma cuidadosa pesquisa e desenvolvimento,
+                    impacto, tornando o Jefersson Ayala uma ameaça real para qualquer oponente.</p>
+                <p>Além da sua capacidade ofensiva, o Jefersson Ayala é o resultado de uma cuidadosa pesquisa e desenvolvimento,
                     combinando mecânica, eletrônica e programação para criar um competidor formidável. Estamos
                     confiantes de que ele tem o potencial para se destacar e demonstrar nossa dedicação ao projeto.</p>
             </div>
@@ -94,12 +94,12 @@
         <h2>Apresentação</h2>
         <div class="videos-container">
             <div class="video-box">
-                <iframe src="https://www.youtube.com/embed/watch?v=ltQa-6Dqfh8&list=RDPsDHm58iwcA&index=2"
-                    frameborder="0"></iframe>
+                <iframe src="https://www.youtube.com/embed/I9HEU-yAyjQ" title="Robô andando"
+                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div class="video-box">
-                <iframe src="https://www.youtube.com/embed/watch?v=ltQa-6Dqfh8&list=RDPsDHm58iwcA&index=2"
-                    title="Construção" frameborder="0" allow=allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/hU1j8EdGNOc"
+                    title="Construção" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </div>
     </section>
@@ -155,13 +155,19 @@
         <p>© 2025 Heriny. All rights reserved to Heriny.</p>
         <div class="icone-container">
             <a href="https://github.com/memellsss/heriny">
-                <img src="./img/git.png" alt="Logo github">
+                <svg width="40" height="40" viewBox="0 0 24 24" fill="white">
+                    <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
+                </svg>
             </a>
             <a href="https://www.youtube.com/channel/UC41aElwlHTOdDB99F3r_VFg">
-                <img src="./img/youtube.jpg" alt="Logo youtube">
+                <svg width="40" height="40" viewBox="0 0 24 24" fill="white">
+                    <path d="M23.498 6.186a3.016 3.016 0 0 0-2.122-2.136C19.505 3.545 12 3.545 12 3.545s-7.505 0-9.377.505A3.017 3.017 0 0 0 .502 6.186C0 8.07 0 12 0 12s0 3.93.502 5.814a3.016 3.016 0 0 0 2.122 2.136c1.871.505 9.376.505 9.376.505s7.505 0 9.377-.505a3.015 3.015 0 0 0 2.122-2.136C24 15.93 24 12 24 12s0-3.93-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z"/>
+                </svg>
             </a>
             <a href="https://www.linkedin.com/in/melany-ayala-653a02301">
-                <img src="./img/linkedin-icon.webp" alt="Logo linkedin">
+                <svg width="40" height="40" viewBox="0 0 24 24" fill="white">
+                    <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/>
+                </svg>
             </a>
         </div>
     </div>
